--- a/employee-service.yml
+++ b/employee-service.yml
@@ -9,7 +9,7 @@ spring:
 eureka:
   client:
     fetch-registry: true
-    service-url:
+    serviceUrl:
       default: http://localhost:8761/eureka
   instance:
     lease-expiration-duration-in-seconds: 2
