--- a/employee-service.yml
+++ b/employee-service.yml
@@ -9,7 +9,7 @@ spring:
 eureka:
   client:
     fetch-registry: true
-    serviceUrl:
+    service-url:
       default: http://localhost:8761/eureka
   instance:
     lease-expiration-duration-in-seconds: 2
@@ -19,7 +19,7 @@ feign:
   hystrix:
     enabled: true
 
- exposing actuator endpoint if not already mapped 
+ 
 management:
   endpoints:
     web:
